Refactor rope system and add client simulation
Large refactor of the lead/rope subsystem: adds architecture docs and a new client-side RopeSimulation stack (RopeSimulationCore, Stepper, Contact/Terrain constraints, VisualState, RenderCache) and related classes. Introduces chunk-scoped sync payloads (SyncRopeChunk, UnloadRopeChunk) and preset/dimension sync (SyncDimensionPresets, SyncDimensionPresets payloads), changes SuperLeadSavedData to a chunk-bucket layout, and moves connection authority to saved data. Adds client reporting and contact geometry handling (ClientRopeContactReport, RopeContactGeometry) and updates RopeContactPulse/Tracker semantics. Updates LeadConnection API and related actions, and many client rendering/mesh/debug components (static chunk registry, mesh drivers, tooltip overlay, visibility, simulation renderer). Removes legacy server-side Verlet/nodes pulses and several old pick/interaction classes. Also adds server-side tuning/config wiring (ServerPhysicsTuning) and syncing logic for presets and server config UI. Overall: reorganizes simulation to client-authoritative visuals, changes network sync to per-chunk model, and cleans up deprecated server physics code.